--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
+    "screenfull": "^5.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -25,7 +26,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.13",
     "sass-loader": "^10.1.1",
-    "vue-cli-plugin-automatic-file": "^1.0.0",
+    "vue-cli-plugin-automatic-file": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
