--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "better-mock": "^0.3.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
     "screenfull": "^5.1.0",
