--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "sass": "^1.32.13",
     "sass-loader": "^10.1.1",
     "vue-cli-plugin-automatic-file": "^1.0.1",
@@ -48,5 +50,16 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "npm run lint"
+    ]
+ }
 }
